# potential-spork

./: .gitignore  README.md  app.py
backend/: festival_planner.db.backup-before-festival-time-repair-2026-06-18.sqlite  festival_planner.db.backup-before-live-import-2026-06-18.sqlite  festival_planner.db.backup-before-reimport-2026-06-14.sqlite  festival_planner.db.backup-before-simplification-review-2026-06-26.sqlite  festival_planner.db.backup-before-wayback-demo-import-2026-06-15.sqlite  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  festival_time.py  priorities.py
backend/app/models/: __init__.py  cycle.py  film.py  screening.py  venue.py
backend/app/repositories/: cycles.py  films.py  screenings.py  venues.py
backend/app/schemas/: common.py  cycle.py  film.py  imported.py  imports.py  planning.py  screening.py  user_choices.py
backend/app/services/: export_ics.py  import_bundle.py  import_catalog.py  import_nifff.py  import_pipeline.py  import_postprocessing.py  screenings.py  user_choices.py
backend/app/sources/: __init__.py  base.py
backend/potential_spork_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_export.py  test_films.py  test_health.py  test_imports.py  test_planning.py  test_screenings.py  test_user_choices.py
backend/tests/core/: test_database.py  test_priorities.py
backend/tests/repositories/: test_cycles.py  test_films.py  test_screenings.py  test_venues.py
backend/tests/sources/: __init__.py
(+92 files in other folders)
